--- a/backjoonhelper__back/bjhelper/pom.xml
+++ b/backjoonhelper__back/bjhelper/pom.xml
@@ -65,6 +65,13 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.0-b170201.1204</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
