--- a/backjoonhelper__front/front/package.json
+++ b/backjoonhelper__front/front/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "5.0.1",
     "recoil": "^0.7.3",
     "recoil-persist": "^4.2.0",
+    "sweetalert2": "^11.4.18",
+    "sweetalert2-react-content": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
